--- a/config/AX6_purple.config
+++ b/config/AX6_purple.config
@@ -5,6 +5,7 @@ CONFIG_TARGET_ipq807x_generic_DEVICE_redmi_ax6=y
 
 CONFIG_LIBCURL_NGHTTP2=y
 
+
 CONFIG_LIBCURL_COOKIES=y	
 CONFIG_LIBCURL_FILE=y	
 CONFIG_LIBCURL_FTP=y	
@@ -24,43 +25,13 @@ CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_zram-swap=y
 
 #ipv6
-CONFIG_PACKAGE_ipv6helper=y
-#
-# CONFIG_PACKAGE_dnsmasq is not set
-CONFIG_PACKAGE_dnsmasq-full=y
-CONFIG_PACKAGE_dnsmasq_full_auth=y
-CONFIG_PACKAGE_dnsmasq_full_conntrack=y
-CONFIG_PACKAGE_dnsmasq_full_dhcp=y
-CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-CONFIG_PACKAGE_dnsmasq_full_dnssec=y
-CONFIG_PACKAGE_dnsmasq_full_ipset=y
-CONFIG_PACKAGE_dnsmasq_full_noid=y
-CONFIG_PACKAGE_dnsmasq_full_tftp=y
-CONFIG_PACKAGE_6in4=y
-CONFIG_PACKAGE_6rd=y
-CONFIG_PACKAGE_6to4=y
-
-#tbcc加速默认集成高通通用SFE加速 
-#使用nss则不使用tbcc
-# CONFIG_PACKAGE_luci-app-turboacc is not set
-# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA is not set
-# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_DRV is not set
-
-
-# NSS
-CONFIG_PACKAGE_kmod-qca-nss-dp=y
-CONFIG_PACKAGE_kmod-qca-ssdk-nohnat=y
-CONFIG_PACKAGE_qca-ssdk-shell=y
-CONFIG_PACKAGE_nss-firmware-ipq8074=y
-
+#CONFIG_PACKAGE_ipv6helper=y
+#CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+#CONFIG_PACKAGE_6in4=y
+#CONFIG_PACKAGE_6rd=y
+#CONFIG_PACKAGE_6to4=y
 
 #删除默认的USB相关
-# CONFIG_PACKAGE_kmod-usb-core is not set
-# CONFIG_PACKAGE_kmod-usb-dwc3 is not set
-# CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
-# CONFIG_PACKAGE_kmod-usb3 is not set
-
-
 # CONFIG_PACKAGE_kmod-usb-core is not set
 # CONFIG_PACKAGE_kmod-usb-dwc3 is not set
 # CONFIG_PACKAGE_kmod-usb3 is not set
@@ -68,6 +39,11 @@ CONFIG_PACKAGE_nss-firmware-ipq8074=y
 
 CONFIG_PACKAGE_cgi-io=y
 
+CONFIG_PACKAGE_kmod-qca-nss-dp=y
+CONFIG_PACKAGE_kmod-qca-ssdk-nohnat=y
+
+#插件区
+CONFIG_PACKAGE_luci-app-adbyby-plus=y
 
 CONFIG_PACKAGE_luci-app-passwall=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook is not set
@@ -104,16 +80,20 @@ CONFIG_PACKAGE_luci-app-ddns=y
 # CONFIG_PACKAGE_luci-app-dnsfilter is not set
 
 CONFIG_PACKAGE_luci-app-upnp=y
-
 CONFIG_PACKAGE_luci-app-ntpc=y
-
-
-# CONFIG_PACKAGE_luci-app-ssr-plus is not set
 CONFIG_PACKAGE_luci-app-openclash=y
 
 # CONFIG_PACKAGE_luci-app-qos is not set
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-ttyd=y
+
+#CONFIG_PACKAGE_luci-app-adguardhome is not set
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-argon_armygreen=y
+CONFIG_PACKAGE_luci-app-netdata=y
+CONFIG_PACKAGE_luci-app-argon-config=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_luci-theme-ifit=y
 
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-opkg=y
@@ -128,21 +108,6 @@ CONFIG_PACKAGE_luci-mod-status=y
 CONFIG_PACKAGE_luci-mod-system=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
-
-
-CONFIG_PACKAGE_luci-app-adbyby-plus=y
-CONFIG_PACKAGE_luci-app-nlbwmon=y
-
-CONFIG_PACKAGE_luci-app-argon-config=y
-CONFIG_PACKAGE_luci-app-arpbind=y
-
-#主题
-CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-theme-argon-lr=y
-CONFIG_PACKAGE_luci-theme-ifit=y
-CONFIG_PACKAGE_luci-theme-argon_armygreen=y
-
-CONFIG_PACKAGE_luci-theme-bootstrap=y
 
 CONFIG_PACKAGE_nss-firmware-ipq8074=y
 CONFIG_PACKAGE_qca-ssdk-shell=y
